app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-first-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-first-app
  template:
    metadata:
      labels:
        app: my-first-app
    spec:
      containers:
        - name: my-container-name
          image: theilig/simple-web-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
