service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-first-service
spec:
  selector:
    app: my-first-app
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
